Enhanced repo level